--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,6 +6,16 @@ $very-pale-blue: hsl(225, 100%, 98%);
 $desaturated-blue: hsl(224, 23%, 55%);
 $dark-blue: hsl(223, 47%, 23%);
 
+* {
+  margin: 0;
+}
+
 p {
   font-size: 16px;
+}
+
+@mixin display {
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
