Added background images

--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,22 @@
   margin: 0;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  background-image: url("/images/pattern-background-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
 p {
   font-size: 16px;
 }
 
 .card-container {
-  height: 100vh;
+  height: 90vh;
 }
 
 .card-container,
@@ -20,6 +30,26 @@ p {
 
 .card {
   flex-direction: column;
+  border-radius: 0.725rem;
+  margin: auto 40vw;
+}
+
+.img-container {
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-image: url(/images/illustration-hero.svg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  background-color: white;
 }
 
 .attribution {
