--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,8 +11,7 @@
 
 .card {
   flex-direction: column;
-  border-radius: 0.725rem;
-  margin: auto 40vw;
+  margin: auto 38vw;
 }
 
 .img-container {
@@ -27,6 +26,21 @@
   @include display;
   flex-direction: column;
   background-color: white;
+}
+
+.info {
+  text-align: center;
+
+  h1 {
+    margin-top: 30px;
+    color: $dark-blue;
+    font-weight: 900;
+  }
+
+  p {
+    margin: 15px 10px;
+    font-size: 16px;
+  }
 }
 
 .attribution {
