--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,13 +39,14 @@
 
   p {
     margin: 15px 10px;
+    color: rgba(153, 159, 170, 255);
     font-size: 16px;
   }
 }
 
 .plan-container {
   @include display;
-  margin: auto 16px 16px 16px;
+  margin: auto 40px 16px 40px;
   padding: 16px;
   background-color: rgba(248, 248, 255, 255);
   border-radius: 15px;
@@ -68,6 +69,19 @@
     margin-left: 50px;
     margin-top: 10px;
     color: $bright-blue;
+  }
+}
+
+.btn {
+  margin-top: 15px;
+  text-align: center;
+  button {
+    border: 2px solid $bright-blue;
+    background-color: $bright-blue;
+    font-size: 16px;
+    color: white;
+    padding: 10px 70px;
+    border-radius: 10px;
   }
 }
 
