Completed Desktop Design

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@
   background-image: url(/images/illustration-hero.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  border-radius: 20px 20px 0 0;
 }
 
 .info-container {
@@ -39,7 +40,7 @@
 
   p {
     margin: 15px 10px;
-    color: rgba(153, 159, 170, 255);
+    color: $desaturated-blue;
     font-size: 16px;
   }
 }
@@ -48,7 +49,7 @@
   @include display;
   margin: auto 40px 16px 40px;
   padding: 16px;
-  background-color: rgba(248, 248, 255, 255);
+  background-color: $very-pale-blue;
   border-radius: 15px;
 
   &_left {
@@ -61,6 +62,9 @@
     h2 {
       font-size: 16px;
       color: $dark-blue;
+    }
+    p {
+      color: $desaturated-blue;
     }
   }
 
@@ -79,15 +83,25 @@
     border: 2px solid $bright-blue;
     background-color: $bright-blue;
     font-size: 16px;
-    color: white;
+    color: $very-pale-blue;
     padding: 10px 70px;
     border-radius: 10px;
   }
 }
 
+.cancel {
+  color: $desaturated-blue;
+  font-size: 16px;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  text-align: center;
+  border-radius: 0 0 20px 20px;
+}
+
 .attribution {
   font-size: 15px;
   text-align: center;
+  font-weight: 700;
 }
 
 .attribution a {
