--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,11 @@ html {
 body {
   background-image: url("/images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  box-sizing: border-box;
+  background-position: center;
   font-family: "Red Hat Display", sans-serif;
 }
 
@@ -38,6 +42,7 @@ body {
   background-image: url(/images/illustration-hero.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  border-radius: 20px 20px 0 0;
 }
 
 .info-container {
@@ -58,7 +63,7 @@ body {
 }
 .info p {
   margin: 15px 10px;
-  color: rgb(153, 159, 170);
+  color: hsl(224, 23%, 55%);
   font-size: 16px;
 }
 
@@ -68,7 +73,7 @@ body {
   align-content: center;
   margin: auto 40px 16px 40px;
   padding: 16px;
-  background-color: rgb(248, 248, 255);
+  background-color: hsl(225, 100%, 98%);
   border-radius: 15px;
 }
 .plan-container_left {
@@ -81,6 +86,9 @@ body {
 .plan-container_left h2 {
   font-size: 16px;
   color: hsl(223, 47%, 23%);
+}
+.plan-container_left p {
+  color: hsl(224, 23%, 55%);
 }
 .plan-container_right {
   margin-right: -50px;
@@ -97,14 +105,24 @@ body {
   border: 2px solid hsl(245, 75%, 52%);
   background-color: hsl(245, 75%, 52%);
   font-size: 16px;
-  color: white;
+  color: hsl(225, 100%, 98%);
   padding: 10px 70px;
   border-radius: 10px;
+}
+
+.cancel {
+  color: hsl(224, 23%, 55%);
+  font-size: 16px;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  text-align: center;
+  border-radius: 0 0 20px 20px;
 }
 
 .attribution {
   font-size: 15px;
   text-align: center;
+  font-weight: 700;
 }
 
 .attribution a {
