--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -17,7 +17,11 @@ html {
 body {
   background-image: url("/images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  box-sizing: border-box;
+  background-position: center;
   font-family: "Red Hat Display", sans-serif;
 }
 
