Finished Active States

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,10 @@ body {
   margin-top: 10px;
   color: hsl(245, 75%, 52%);
 }
+.plan-container_right a:hover {
+  color: hsl(245, 75%, 52%);
+  text-decoration: none;
+}
 
 .btn {
   margin-top: 15px;
@@ -109,6 +113,10 @@ body {
   padding: 10px 70px;
   border-radius: 10px;
 }
+.btn button:hover {
+  background-color: hsla(245, 75%, 52%, 0.719);
+  cursor: pointer;
+}
 
 .cancel {
   color: hsl(224, 23%, 55%);
@@ -117,6 +125,10 @@ body {
   margin-bottom: 30px;
   text-align: center;
   border-radius: 0 0 20px 20px;
+}
+.cancel p:hover {
+  color: hsl(223, 47%, 23%);
+  cursor: pointer;
 }
 
 .attribution {
