--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,6 +2,7 @@
 
 $pale-blue: hsl(225, 100%, 94%);
 $bright-blue: hsl(245, 75%, 52%);
+$bright-blue-gradient: hsla(245, 75%, 52%, 0.719);
 $very-pale-blue: hsl(225, 100%, 98%);
 $desaturated-blue: hsl(224, 23%, 55%);
 $dark-blue: hsl(223, 47%, 23%);
