--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,6 +73,11 @@
     margin-left: 50px;
     margin-top: 10px;
     color: $bright-blue;
+
+    a:hover {
+      color: $bright-blue;
+      text-decoration: none;
+    }
   }
 }
 
@@ -87,6 +92,10 @@
     padding: 10px 70px;
     border-radius: 10px;
   }
+  button:hover {
+    background-color: $bright-blue-gradient;
+    cursor: pointer;
+  }
 }
 
 .cancel {
@@ -96,6 +105,11 @@
   margin-bottom: 30px;
   text-align: center;
   border-radius: 0 0 20px 20px;
+
+  p:hover {
+    color: $dark-blue;
+    cursor: pointer;
+  }
 }
 
 .attribution {
