--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ body {
   color: hsl(225, 100%, 98%);
   padding: 10px 70px;
   border-radius: 10px;
+  box-shadow: 1px 6px #ddd9f6;
 }
 .btn button:hover {
   background-color: hsla(245, 75%, 52%, 0.719);
@@ -139,4 +140,29 @@ body {
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (max-width: 768px) {
+  .plan-container {
+    margin: auto 20px 16px 20px;
+  }
+  .plan-container_left img {
+    margin-left: 10px;
+  }
+  .plan-container_right {
+    margin-right: 10px;
+    margin-top: 20px;
+  }
+}
+@media only screen and (max-width: 1180px) {
+  .plan-container {
+    margin: auto 20px 16px 20px;
+  }
+  .plan-container_left img {
+    margin-left: 10px;
+  }
+  .plan-container_right {
+    margin-right: 10px;
+    margin-top: 20px;
+  }
 }/*# sourceMappingURL=main.css.map */
