--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-radius: 20px 20px 0 0;
+  -webkit-border-radius: 20px 20px 0 0;
 }
 
 .info-container {
